Revision history for {{$dist->name}}

{{$NEXT}}
        - fix string interpolation issues in tests on win32

0.004     2013-10-26 05:42:35Z (Karen Etheridge)
        - tweaked tests for more win32 friendliness

0.003     2013-10-21 17:15:36Z (Karen Etheridge)
        - fix test to use the same perl executable, to ensure required modules
          are present

0.002     2013-10-20 04:26:21Z (Karen Etheridge)
        - "repeat_prompt" now works properly, passing the string as a single
          argument to the command

0.001     2013-10-18 03:30:47Z (Karen Etheridge)
        - Initial release.